2014-07-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mathml.spad, src/algebra/clifford.spad,
	src/algebra/export3D.spad: Use 'sayBrightly' instead of
	'sayTeX'

2014-07-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/interval.spad: Change difference of intervals
	to agree with definition as interval operation

2014-06-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform2.spad, src/algebra/fortout.spad:
	s/Formater/Formatter/

2014-06-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/tree.spad: Remove useless conditions

2014-06-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/msgdb.boot,
	src/interp/scwrap2.boot: Minor cleanups

2014-06-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scwrap2.boot:  Fix handling of '\/' and '/\'

2014-06-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/ncomp.boot:  Fix toplevel multiparameter macros

2014-06-08  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/aggcat.spad: bugfix subset?

2014-05-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pgcd.spad:  Fix failure due to bad reduction

2014-05-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/attribs.spad, src/algebra/clifford.spad,
	src/algebra/combfunc.spad, src/algebra/computation.spad,
	src/algebra/curve.spad, src/algebra/dirichlet.spad,
	src/algebra/distro.spad, src/algebra/dhmatrix.spad,
	src/algebra/efstruc.spad, src/algebra/fffg.spad,
	src/algebra/generic.spad, src/algebra/graph.spad,
	src/algebra/hashstate.spad, src/algebra/html.spad,
	src/algebra/integer.spad, src/algebra/mantepse.spad,
	src/algebra/matcat.spad, src/algebra/mathml.spad,
	src/algebra/modhpsol.spad, src/algebra/newpoly.spad,
	src/algebra/numtheor.spad, src/algebra/ore.spad:
	Make sure .spad files are correct Spad
	src/scripts/unpack_file: Adjust

2014-05-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/unpack_file: More portable version
