@@ -59,5 +59,5 @@ ao/%.ao: ap/%.ap al/libaxiom_%.al ao/.dir
 # TODO: Maybe that can be removed some day. There is no real need to create
 # subdirectories.
 %/.dir:
-	mkdir -p $(patsubst %/.dir,%,$@)
+	${MKDIR_P} $(patsubst %/.dir,%,$@)
 	touch -t 199901010000 $@
