@@ -49,5 +49,5 @@ runtimefiles: $(runtime_files)
 # TODO: Maybe that can be removed some day. There is no real need to create
 # subdirectories.
 %/.dir:
-	mkdir -p $(patsubst %/.dir,%,$@)
+	${MKDIR_P} $(patsubst %/.dir,%,$@)
 	touch -t 199901010000 $@
