@@ -1,3 +1,10 @@
+2014-08-04  Ralf Hemmecke  <ralf@hemmecke.org>
+
+	* Makefile.in, config/var-def.mk, src/aldor/Makefile.in,
+	src/aldor/Makefile2.in, src/aldor/Makefile3.in,
+	src/algebra/Makefile.in, src/doc/Makefile.in: use ${MKDIR_P}
+	instead of 'mkdir -p'
+
 2014-07-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/mathml.spad, src/algebra/clifford.spad,
